# leadblitz-deploy

./: .env.example  .gitignore  alembic.ini  build.sh  pyproject.toml  render.yaml  run.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_feature_expansion.py  003_add_email_tracking_fields.py  004_add_google_place_id_to_leads.py  005_add_sms_tracking_fields.py
app/: __init__.py  config.py  database.py  deps.py  models.py
app/auth/: sessions.py
app/routers/: admin.py  analytics.py  auth.py  credits.py  csv.py  email.py  enrichment.py  leads.py  pages.py  public_score.py  reports.py  scoring.py  search.py  settings.py  sms.py
app/services/: ai_email.py  ai_scorer.py  client_report.py  credit_drip.py  credits.py  csv_import.py  email_enrichment.py  email_senders.py  encryption.py  framework_detector.py  pagespeed.py  pdf_report.py  places.py  scorer.py  site_fetcher.py  site_heuristics.py  sms.py  stripe_client.py  system_email.py  technographics.py
app/static/: blog.css  landing.css  style.css
app/templates/: base.html
app/templates/blog/: cold-email-that-gets-replies.html  follow-up-sequence.html  free-audit-strategy.html  skip-the-inbox.html
app/templates/pages/: admin.html  blog.html  blog_post.html  campaigns.html  contact.html  credits.html  dashboard.html  email.html  forgot_password.html  import.html  landing.html  lead_detail.html  leads.html  login.html  payment_cancel.html  payment_success.html  privacy.html  register.html  reset_password.html  score.html  search.html  settings.html  sms.html
app/templates/partials/: batch_progress.html  (+21 more)
