[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadblitz-v2"
version = "2.0.0"
description = "Lead generation SaaS — Find, Score, Review"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "alembic",
    "pydantic-settings",
    "python-dotenv",
    "itsdangerous",
    "passlib[bcrypt]",
    "python-multipart",
    "openai",
    "requests",
    "beautifulsoup4",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]
